<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/_20sdp"
    android:padding="@dimen/_3sdp"
    android:background="@drawable/border_full_with_shadow"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border_bottom_thin">

        <TextView
            android:id="@+id/tv_nama_toko"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_5sdp"
            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:text="Nama Toko"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp"
            android:textStyle="bold" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border_bottom_thin"
        android:paddingBottom="@dimen/_30sdp"
        android:paddingLeft="@dimen/_15sdp"
        android:paddingRight="@dimen/_15sdp"
        android:paddingTop="@dimen/_20sdp">

        <ImageView
            android:id="@+id/iv_gambar_product"
            android:layout_width="@dimen/_60sdp"
            android:layout_height="@dimen/_60sdp"
            android:src="@drawable/dummy1_1" />

        <TextView
            android:id="@+id/tv_nama_product"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_toRightOf="@id/iv_gambar_product"
            android:maxWidth="@dimen/_125sdp"
            android:text="FRONTE Sosis Beef Frankfurter 500gr"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp" />

        <TextView
            android:id="@+id/tv_jumlah_product"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_nama_product"
            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_toRightOf="@id/iv_gambar_product"
            android:text="2 pcs"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp" />

        <TextView
            android:id="@+id/tv_harga_product"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_jumlah_product"
            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_toRightOf="@id/iv_gambar_product"
            android:text="Rp 79.200"
            android:textColor="@color/purple"
            android:textSize="@dimen/_15sdp" />
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border_bottom_thin"
        android:paddingBottom="@dimen/_7sdp"
        android:paddingLeft="@dimen/_15sdp"
        android:paddingRight="@dimen/_15sdp"
        android:paddingTop="@dimen/_7sdp"
        android:text="Notes for seller"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/et_catatan"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_80sdp"
        android:background="@drawable/border_bottom_thin"
        android:gravity="top"
        android:hint="@string/catatan_untuk_penjual"
        android:maxLines="5"
        android:paddingLeft="@dimen/_15sdp"
        android:paddingRight="@dimen/_15sdp"
        android:paddingTop="@dimen/_5sdp"
        android:textColor="@color/black"
        android:textSize="@dimen/_10sdp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border_bottom_thin"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/_10sdp"
            android:paddingLeft="@dimen/_15sdp"
            android:paddingRight="@dimen/_15sdp"
            android:paddingTop="@dimen/_10sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shippingagent"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp" />

            <Spinner
                android:id="@+id/spinner_agent"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="@dimen/_20sdp"
                android:layout_marginLeft="@dimen/_40sdp"
                android:layout_marginRight="@dimen/_30sdp"
                android:background="@drawable/spinner_border" />
            <TextView
                android:gravity="right"
                android:id="@+id/tv_ETD"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:text="7-8 Days"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/_10sdp"
            android:paddingLeft="@dimen/_15sdp"
            android:paddingRight="@dimen/_15sdp"
            android:paddingTop="@dimen/_10sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ShippingType"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp" />

            <Spinner
                android:id="@+id/spinner_type"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="@dimen/_20sdp"
                android:layout_marginLeft="@dimen/_40sdp"
                android:layout_marginRight="@dimen/_30sdp"
                android:background="@drawable/spinner_border" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/_10sdp"
            android:paddingLeft="@dimen/_15sdp"
            android:paddingRight="@dimen/_15sdp"
            android:paddingTop="@dimen/_10sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shipping_cost"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp" />

            <TextView
                android:id="@+id/tv_shipping_cost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_40sdp"
                android:text="Rp 8.500"
                android:textColor="@color/purple"
                android:textSize="@dimen/_15sdp" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_top_thin"
            android:gravity="center_vertical"
            android:paddingBottom="@dimen/_10sdp"
            android:paddingLeft="@dimen/_15sdp"
            android:paddingRight="@dimen/_15sdp"
            android:paddingTop="@dimen/_10sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/subtotal"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp" />

            <TextView
                android:id="@+id/tv_subtotal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="@dimen/_40sdp"
                android:text="Rp 10.100"
                android:textColor="@color/purple"
                android:textSize="@dimen/_15sdp" />
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>